--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lice-tddschn"
-version = "0.1.0"
+version = "0.1.1"
 description = "Generate a license file for a project"
 authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
 license = "MIT"
@@ -16,7 +16,7 @@ classifiers = [
 keywords = ["lice", "license", "generator"]
 
 [tool.poetry.scripts]
-lice = "lice.core:main"
+lice = "lice_tddschn.core:main"
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/tddschn/lice-tddschn/issues"
